# notpeter-apps

./: README.md
usps/: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  rates.json  schema.sql
usps/data/stamps/1996/american-indian-dances/: metadata.conl
usps/data/stamps/1996/atlanta-centennial-olympic-games/: metadata.conl
usps/data/stamps/1996/big-band-leaders/: metadata.conl
usps/data/stamps/1996/blue-jay/: metadata.conl
usps/data/stamps/1996/breast-cancer-awareness/: metadata.conl
usps/data/stamps/1996/cal-farley/: metadata.conl
usps/data/stamps/1996/centennial-olympic-games/: metadata.conl
usps/data/stamps/1996/computer-technology/: metadata.conl
usps/data/stamps/1996/cycling/: metadata.conl
usps/enrichment/: exclude.conl
usps/enrichment/rates/: letter.conl  ounce.conl  postcard.conl
usps/enrichment/stamps/: 1995.conl  1996.conl  1997.conl  1998.conl  1999.conl  2000.conl  2001.conl  2002.conl  2003.conl  2004.conl  2005.conl  2006.conl  2007.conl  2008.conl  2009.conl  2010.conl  2011.conl  2012.conl  2013.conl  2014.conl  2015.conl  2016.conl  2017.conl  2018.conl  2019.conl  2020.conl  2021.conl  2022.conl  2023.conl  2024.conl  2025.conl  2026.conl
usps/newsroom/: 2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
usps/scripts/: ua.sh  update.sh
usps/src/: conl_ser.rs  enrichment.rs  generate.rs  main.rs  rates.rs  scrape.rs  simple.rs  sync.rs  types.rs  utils.rs
(+1144 files in other folders)
