[package]
name = "usps-rates"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.20"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
chrono = "0.4"
conl = "1.6"
